--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ bytes = "1.2.1"
 chrono = "0.4.22"
 csv = "1.1.6"
 env_logger = "0.9.0"
-exrs = { path = "../exrs" }
+exrs = { git = "https://github.com/zhenpingfeng/exrs" }
 float-cmp = "0.9.0"
 linreg = "0.2.0"
 local-channel = "0.1.3"
